--- a/index.html
+++ b/index.html
@@ -9,8 +9,37 @@
 <body>
   <div id="my-canvas">
     <!-- Här skall allt läggas -->
-
-    
+    <div id="sun-glow"></div>
+    <div id="sun"></div>
+    <div id="ocean"></div>
+    <div id="rocks">
+      <img src="images/rocks.svg" alt="">
+    </div>
+    <div id="ocean-stripes">
+      <div class="stripe stripe-1"></div>
+      <div class="stripe stripe-2"></div>
+      <div class="stripe stripe-3"></div>
+      <div class="stripe stripe-4"></div>
+      <div class="stripe stripe-5"></div>
+    </div>
+    <div id="boat">
+      <div id="hull">
+        <img src="images/hull.svg" alt="">
+      </div>
+      <div id="list"></div>
+      <div id="cabin">
+        <img src="images/cabin.svg" alt="">
+        <div id="cabin-windows">
+          <div class="window window-1"></div>
+          <div class="window window-2"></div>
+          <div class="window window-3"></div>
+        </div>
+        <div id="mattias">
+          <div id="hair"></div>
+          <div id="eyes"></div>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
